appId: comm.mybeaconapp
---

- launchApp


# Make sure user is on home screen 
- assertVisible:
    id: "home-screen-user-profile-icon"

- assertVisible: "Planning List"
- tapOn: "Planning List"
- assertVisible: "Your Lists"

- assertVisible:
    id: "popular-list-title-text"

