appId: comm.mybeaconapp
---


- assertVisible:
    id: "signup-button"
- tapOn:
    id: "signup-button"
- assertVisible: "Let’s start with your email you@email.com"
- inputText: "pabla@g"
- assertVisible: "Did you mean gmail.com?"
- tapOn: "Did you mean gmail.com?"
- assertVisible:
    id: "icon-button"
    index: 1
- tapOn:
    id: "icon-button"
    index: 1
- assertVisible: "To continue, enter the code we sent to"
- assertVisible:
    id: "icon-button"
- tapOn:
    id: "icon-button"
- assertVisible:
    id: "icon-button"
    index: 0
- tapOn:
    id: "icon-button"
    index: 0
- assertVisible:
    id: "signup-button"
